# py-image-resizer

./: README.md  imageResizer.py  pyproject.toml
